--- a/index.html
+++ b/index.html
@@ -7,30 +7,30 @@
     <title>My Painting Business</title>
 </head>
 <body>
+    <div class="container">
+        <header class="header">
+            <nav class="navbar">
+                <div class="logo">
+                    <h2>My Painting Business</h2>
+                </div>
+                <div class="link-nav">
+                        <a href="#home">Home</a>
+                        <a href="#services">Services</a>
+                        <a href="#contact">Contact</a>
+                </div>
+            </nav>
+        </header>
 
-    <header>
-        <nav class="mainMenu">
-            <div class="logo">
-                <h2>My Painting Business</h2>
+        <section id="home" class="hero-section">
+            <div class="hero-content">
+                <h1>Your Trusted Painting Experts</h1>
+                <p>Quality workmanship for residential and commercial painting projects.</p>
+                <a href="#contact" class="btn">Get a Free Quote</a>
             </div>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <section id="home" class="hero-section">
-        <div class="hero-content">
-            <h1>Your Trusted Painting Experts</h1>
-            <p>Quality workmanship for residential and commercial painting projects.</p>
-            <a href="#contact" class="btn">Get a Free Quote</a>
-        </div>
-    <section id="projects" aria-labelledby="projects-title" class="projects-section">
-        <h2 id="projects-title">Our Projects</h2>
-        <p>Browse some of our recent painting jobs — residential, exterior and commercial work.</p>
-
+        </section>    
+        <section id="projects" aria-labelledby="projects-title" class="projects-section">
+            <h2 id="projects-title">Our Projects</h2>
+            <p>Browse some of our recent painting jobs — residential, exterior and commercial work.</p>
         <div class="projects-grid">
             <article class="project-card">
                 <img src="images/project1.jpg" alt="Living room after repainting">
@@ -50,15 +50,12 @@
                 <p>Professional, fast work to minimize downtime for businesses.</p>
             </article>
         </div>
-
         <p><a href="#contact" class="btn">Request a Quote</a></p>
-    </section>
+        </section>
 
     <footer>
         <p>&copy; 2025 My Painting Business All rights reserved</p>
     </footer>
-
-
-
+    </div>
 </body>
 </html>
